--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <ul class="ul nav-toggle">
                 <li><a href="#" id="active">home</a></li>
                 <li><a href="#">my projects</a></li>
-                <li><a href="Pages/404.html">about us</a></li>
-                <li><a href="Pages/404.html">contact us</a></li>
+                <li><a href="Pages/404.html">about me</a></li>
+                <li><a href="Pages/404.html">contact me</a></li>
             </ul>
             <input type="checkbox" id="check">
             <label for="check">
@@ -48,7 +48,18 @@
     </div>
     <div class="section" id="section-2">
         <div class="hero-2">
-            
+            <div class="card-div">
+                <h1>Recent Projects</h1>
+                <div class="cards">
+                    <div class="card">cant load</div>
+                    <div class="card">cant load</div>
+                    <div class="card">cant load</div>
+                </div>
+            </div>
+            <div class="about-us-div">
+                <h1>About Me</h1>
+                <p>Hello! I'm Sagar Kumar, a 15-year-old web developer i am from Patna, Bihar, India. <br> Passionate about Making Websites, I Know The Languages Like HTML, CSS, JS & React JS etc... <br> I Have Created this webpage to show my <a href="#">Projects</a>  that i have created with my Experience in the world of world of web development!</p>
+            </div>
         </div>
     </div>
     <div class="footer">
@@ -56,8 +67,8 @@
             <ul class="ul">
                 <li><a href="#">home</a></li>
                 <li><a href="#">my projects</a></li>
-                <li><a href="Pages/404.html">about us</a></li>
-                <li><a href="Pages/404.html">contact us</a></li>
+                <li><a href="Pages/404.html">about me</a></li>
+                <li><a href="Pages/404.html">contact me</a></li>
             </ul>
         </div>
         <hr>
