--- a/index.html
+++ b/index.html
@@ -46,22 +46,7 @@
         </div>
         <a href="#">View My Works</a>
     </div>
-    <div class="section" id="section-2">
-        <div class="hero-2">
-            <div class="card-div">
-                <h1>Recent Projects</h1>
-                <div class="cards">
-                    <div class="card">cant load</div>
-                    <div class="card">cant load</div>
-                    <div class="card">cant load</div>
-                </div>
-            </div>
-            <div class="about-us-div">
-                <h1>About Me</h1>
-                <p>Hello! I'm Sagar Kumar, a 15-year-old web developer i am from Patna, Bihar, India. <br> Passionate about Making Websites, I Know The Languages Like HTML, CSS, JS & React JS etc... <br> I Have Created this webpage to show my <a href="#">Projects</a>  that i have created with my Experience in the world of world of web development!</p>
-            </div>
-        </div>
-    </div>
+    <div class="section" id="section-2"></div>
     <div class="footer">
         <div class="row-1 row">
             <ul class="ul">
