--- a/index.html
+++ b/index.html
@@ -11,65 +11,102 @@
 </head>
 
 <body>
-    <nav>
-        <div class="left-side side">
-            <div class="logo-div">
-                <a href="index.html"><img src="Images/logo.png" alt="can't load image" class="logo"></a>
-            </div>
-            <div class="company-name-div">
-                <h1 class="company-name">ATBITCODE</h1>
-            </div>
-        </div>
-        <div class="right-side side">
-            <ul class="ul nav-toggle">
-                <li><a href="#" id="active">home</a></li>
-                <li><a href="#">my projects</a></li>
-                <li><a href="Pages/404.html">about me</a></li>
-                <li><a href="Pages/404.html">contact me</a></li>
-            </ul>
-            <input type="checkbox" id="check">
-            <label for="check">
-                <div class="hamburger">
-                    <div class="bar bar-1"></div>
-                    <div class="bar bar-2"></div>
-                    <div class="bar bar-3"></div>
+    <div class="main-div">
+        <nav>
+            <div class="left-side side">
+                <div class="logo-div">
+                    <a href="index.html"><img src="Images/logo.png" alt="can't load image" class="logo"></a>
                 </div>
-            </label>
-        </div>
-    </nav>
+                <div class="company-name-div">
+                    <h1 class="company-name">ATBITCODE</h1>
+                </div>
+            </div>
+            <div class="right-side side">
+                <ul class="ul nav-toggle">
+                    <li><a href="#" id="active">home</a></li>
+                    <li><a href="#">my projects</a></li>
+                    <li><a href="Pages/404.html">about me</a></li>
+                    <li><a href="Pages/404.html">contact me</a></li>
+                </ul>
+                <input type="checkbox" id="check">
+                <label for="check">
+                    <div class="hamburger">
+                        <div class="bar bar-1"></div>
+                        <div class="bar bar-2"></div>
+                        <div class="bar bar-3"></div>
+                    </div>
+                </label>
+            </div>
+        </nav>
 
-    <div class="section" id="section-1">
-        <div class="hero">
-            <h2>Welcome To</h2>
-            <h1>Atbitcode</h1>
-            <h3>Ft. Sagar Kumar(Web Developer)</h3>
+        <div class="section" id="section-1">
+            <div class="hero">
+                <h2>Welcome To</h2>
+                <h1>Atbitcode</h1>
+                <h3>Ft. Sagar Kumar(Web Developer)</h3>
+            </div>
+            <a href="#">View My Works</a>
         </div>
-        <a href="#">View My Works</a>
-    </div>
-    <div class="section" id="section-2"></div>
-    <div class="footer">
-        <div class="row-1 row">
-            <ul class="ul">
-                <li><a href="#">home</a></li>
-                <li><a href="#">my projects</a></li>
-                <li><a href="Pages/404.html">about me</a></li>
-                <li><a href="Pages/404.html">contact me</a></li>
-            </ul>
-        </div>
-        <hr>
-        <div class="row-2 row">
-            <h3>Follow Me On</h3>
-            <div class="follow-links-div">
-                <a href="#"><img src="Images/facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="Images/instagram.png" alt="Instagram"></a>
-                <a href="#"><img src="Images/twitter.png" alt="Twitter"></a>
-                <a href="#"><img src="Images/youtube.png" alt="Youtube"></a>
+        <div class="section" id="section-2">
+            <div class="page" id="page-1">
+                <h1>About Me</h1>
+                <div class="box">
+                    <div class="chart-div">
+                        <div class="chart">
+                            <h2>HTML</h2>
+                            <div class="bar-1 bar"></div>
+                            <h4>89%</h4>
+                        </div>
+                        <div class="chart">
+                            <h2>CSS</h2>
+                            <div class="bar-2 bar"></div>
+                            <h4>73%</h4>
+                        </div>
+                        <div class="chart">
+                            <h2>JS</h2>
+                            <div class="bar-3 bar"></div>
+                            <h4>56%</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="box">
+                    <p id="para">hey, my name is sagar i am a web developer i know many languages like HTML, CSS, JS,
+                        Talwind CSS, React JS etc.. . i like to make amazing websites like this i have created this
+                        website to show you my all amazing websites and projects that i have ever made, if you have any
+                        queries then you can ask on the form given below to in the right side</p>
+                </div>
+            </div>
+            <div class="page" id="page-2">
+                <div class="form-hedding-div">
+                    <h1>Contact Us</h1>
+                </div>
+                <form action="">
+                    <div class="input-div">
+                        <input type="email" name="email" class="email-input" placeholder="Please Enter Your Email">
+                    </div>
+                    <div class="massage-input-div">
+                        <textarea name="massage" cols="30" rows="10" class="massage"></textarea>
+                    </div>
+                    <div class="btn-div">
+                        <button type="submit" class="submit">Submit</button>
+                    </div>
+                </form>
             </div>
         </div>
-        <hr>
-        <div class="row-3 row">
-            <div class="lisences">
-                <h3>© <a href="#">AtbitCode</a> 2024 | All Right Reserved</h3>
+        <div class="footer">
+            <div class="row-1 row">
+                <h3>Follow Me On</h3>
+                <div class="follow-links-div">
+                    <a href="#"><img src="Images/facebook.png" alt="Facebook"></a>
+                    <a href="#"><img src="Images/instagram.png" alt="Instagram"></a>
+                    <a href="#"><img src="Images/twitter.png" alt="Twitter"></a>
+                    <a href="#"><img src="Images/youtube.png" alt="Youtube"></a>
+                </div>
+            </div>
+            <div class="row-2 row">
+                <div class="lisences">
+                    <h3>© <a href="#">AtbitCode</a> 2024 | All Right Reserved</h3>
+                </div>
             </div>
         </div>
     </div>
