--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <div class="left-side side">
                 <div class="logo-div">
-                    <a href="index.html"><img src="Images/logo.png" alt="can't load image" class="logo"></a>
+                    <a href="index.html"><img src="Images/log.png" alt="can't load image" class="logo"></a>
                 </div>
                 <div class="company-name-div">
                     <h1 class="company-name">ATBITCODE</h1>
