--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <h1>Atbitcode</h1>
                 <h3>Ft. Sagar Kumar(Web Developer)</h3>
             </div>
-            <a href="#">View My Works</a>
+            <a href="Pages/projects.html">View My Works</a>
         </div>
         <div class="section" id="section-2">
             <div class="page" id="page-1">
@@ -71,9 +71,8 @@
                 </div>
                 <div class="box box-2">
                     <p id="para">hey, my name is sagar i am a web developer i know many languages like HTML, CSS, JS,
-                        Talwind CSS, React JS etc.. . i like to make amazing websites like this i have created this
-                        website to show you my all amazing websites and projects that i have ever made, if you have any
-                        queries then you can ask on the form given below to in the right side</p>
+                        Talwind CSS, React JS etc. i like to make amazing websites like this i have created this
+                        website to show you my all amazing websites and projects that i have ever made</p>
                 </div>
             </div>
             <div class="page" id="page-2">
