--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -24,7 +24,7 @@
         <nav>
             <div class="left-side side">
                 <div class="logo-div">
-<!--                     <a href="index.html"><img src="../Images/logo.png" alt="can't load image" class="logo"></a> -->
+                    <a href="index.html"><img src="../Images/logo.png" alt="can't load image" class="logo"></a>
                 </div>
                 <div class="company-name-div">
                     <h1 class="company-name">ATBITCODE</h1>
@@ -86,6 +86,19 @@
                     <div class="card-languages-div">
                         <h6>Languages Used: HTML, CSS & JS</h6>
                         <h6>FrameWorks Used: None</h6>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <div class="card-hedding-div">
+                        <h1><a href="https://atbitcodeofficial.github.io/camera/">Camera</a></h1>
+                    </div>
+                    <div class="card-para-div">
+                        <h4>Description:</h4>
+                        <p>A Structure Of Camera Made Up Of Pure Css</p>
+                    </div>
+                    <div class="card-languages-div">
+                        <h6>Languages Used: HTML, CSS & JS</h6>
+                        <h6>FrameWorks Used: Tailwind Css</h6>
                     </div>
                 </div>
             </div>
