--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -114,6 +114,19 @@
                         <h6>FrameWorks Used: None</h6>
                     </div>
                 </div>
+                <div class="card-body">
+                    <div class="card-hedding-div">
+                        <h1><a href="https://atbitcodeofficial.github.io/Bihartourism">Alarm clock</a></h1>
+                    </div>
+                    <div class="card-para-div">
+                        <h4>Description:</h4>
+                        <p>i have made a alarm clock</p>
+                    </div>
+                    <div class="card-languages-div">
+                        <h6>Languages Used: HTML, CSS</h6>
+                        <h6>FrameWorks Used: None</h6>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="footer">
