--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -116,7 +116,7 @@
                 </div>
                 <div class="card-body">
                     <div class="card-hedding-div">
-                        <h1><a href="https://atbitcodeofficial.github.io/Bihartourism">Alarm clock</a></h1>
+                        <h1><a href="https://atbitcodeofficial.github.io/alarmclock/">Alarm clock</a></h1>
                     </div>
                     <div class="card-para-div">
                         <h4>Description:</h4>
